# libhyscancontrol

./: CMakeLists.txt
doc/: Doxyfile  html_header  mainpage.doxy
hyscancontrol/: CMakeLists.txt  hyscan-control-common.c  hyscan-control-common.h  hyscan-control-exports.h  hyscan-control-marshallers.list  hyscan-control.c  hyscan-control.h  hyscan-generator-control-server.c  hyscan-generator-control-server.h  hyscan-generator-control.c  hyscan-generator-control.h  hyscan-generator-proxy.c  hyscan-generator-proxy.h  hyscan-marshallers.list  hyscan-nmea-uart.c  hyscan-nmea-uart.h  hyscan-nmea-udp.c  hyscan-nmea-udp.h  hyscan-proxy-common.c  hyscan-proxy-common.h  hyscan-sensor-control-server.c  hyscan-sensor-control-server.h  hyscan-sensor-control.c  hyscan-sensor-control.h  hyscan-sensor-proxy.c  hyscan-sensor-proxy.h  hyscan-sonar-box.c  hyscan-sonar-box.h  hyscan-sonar-client.c  hyscan-sonar-client.h  hyscan-sonar-control-async.c  hyscan-sonar-control-async.h  hyscan-sonar-control-server.c  hyscan-sonar-control-server.h  hyscan-sonar-control.c  hyscan-sonar-control.h  hyscan-sonar-discover.c  hyscan-sonar-discover.h  hyscan-sonar-driver.c  hyscan-sonar-driver.h  (+28 more)
tests/: CMakeLists.txt  dummy-sonar-client.c  dummy-sonar-server.c  dummy-ssse-client.c  dummy-ssse-server.c  hyscan-sonar-dummy-ssse-overrides.ini  hyscan-sonar-dummy-ssse-resources.xml  hyscan-sonar-dummy-ssse-schema.xml  hyscan-sonar-dummy-ssse.c  hyscan-sonar-dummy-ssse.h  hyscan-sonar-dummy.c  hyscan-sonar-dummy.h  nmea-uart-test.c  nmea-uart2udp.c  nmea-udp-test.c  nmea-udpd.c  sonar-control-data-test.c  sonar-control-test.c  sonar-schema.c
